# droughtmonitor

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  LICENSE.txt  NAMESPACE  README.md  README.rmd  pyproject.toml
.github/workflows/: R-CMD-check.yaml  python-package.yml  python-publish.yml
R/: get_drought_map.R  helpers.R  monitor_drought.R  zzz.R
README_cache/gfm/: __packages  unnamed-chunk-1_0cfc1e2fc28a2969786ce444f93a7f29.RData  unnamed-chunk-1_0cfc1e2fc28a2969786ce444f93a7f29.rdb  unnamed-chunk-1_0cfc1e2fc28a2969786ce444f93a7f29.rdx
data/: fips_codes.rda
data-raw/: fips_codes.R
man/: fips_codes.Rd  get_drought_map.Rd  monitor_drought.Rd
src/droughtmonitor/: __about__.py  __init__.py  test_usdm.py  usdm.py
src/droughtmonitor/data/: fips_codes.csv  update_fips_codes.R
tests/: testthat.R
tests/testthat/: test-check_status_code.R  test-monitor_drought.R
