[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "droughtmonitor"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dylan Turner", email = "dylan.turner3@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Dylan Turner/droughtmonitor#readme"
Issues = "https://github.com/Dylan Turner/droughtmonitor/issues"
Source = "https://github.com/Dylan Turner/droughtmonitor"

[tool.hatch.version]
path = "src/droughtmonitor/__about__.py"
